[project]
name = "langgrapgh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.29",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.6",
    "langsmith>=0.4.21",
    "python-dotenv>=1.1.1",
]
